--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,24 @@
 Package: REVOLVER.datasets
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Data released along with the REVOLVER package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Giulio Caravagna
+Maintainer: Giulio Caravagna <gcaravagn@gmail.com>
+Authors@R: person("Giulio", "Caravagna", role = c("aut", "cre"), email = "gcaravagn@gmail.com")
+Description: Data released along with the REVOLVER package, an results of the analysis
+  carried out with the REVOLVER algorithm.
+License: GPL
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 2.1.0)
+Imports: 
+    clisymbols,
+    pio
+Remotes: caravagn/pio
 RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+URL: https://github.com/caravagn/REVOLVER.datasets
+BugReports: https://github.com/caravagn/REVOLVER.datasets/issues
