--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: REVOLVER.datasets
+Package: evoverse.datasets
 Type: Package
-Title: Data released along with the REVOLVER package
+Title: Data released along with the evoverse package
 Version: 0.1.0
 Author: Giulio Caravagna
 Maintainer: Giulio Caravagna <gcaravagn@gmail.com>
 Authors@R: person("Giulio", "Caravagna", role = c("aut", "cre"), email = "gcaravagn@gmail.com")
-Description: Data released along with the REVOLVER package, an results of the analysis
-  carried out with the REVOLVER algorithm.
+Description: Data released along with the evoverse package, an results of the analysis
+  carried out with evoverse packages.
 License: GPL
 Encoding: UTF-8
 LazyData: true
@@ -20,5 +20,5 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: https://github.com/caravagn/REVOLVER.datasets
-BugReports: https://github.com/caravagn/REVOLVER.datasets/issues
+URL: https://github.com/caravagn/evoverse.datasets
+BugReports: https://github.com/caravagn/evoverse.datasets/issues
